--- a/index.html
+++ b/index.html
@@ -15,10 +15,28 @@
                     </div>
             </header>
             <main>
+                <div class="video">
+                    <video autoplay loop>
+                        <source src="./resources/videos/excursion.mp4" type="video/mp4">
+                    </video>
+                </div>
+                <div class="lower--main">
+                    <h2 class="page--title">Your personal travel guide</h1>
+                    <p class="info">Excursion remembers places you like, and recommends new points of interest around you.</p>
+                    <img src="./resources/images/camp.webp" alt="Image of a camp site">
+                    <p>
+                        <img src="./resources/images/phone.webp" alt="">
+                    </p>
+                    <p>
+                        <h3 class="page--title">Coming Soon for iPhone and Android</h3>
+                        <p><a class="page--caption" href="#">Download Excursion (Coming soon!)</a></p>
+                    </p>
+                    
+                </div>
 
             </main>
             <footer>
-
+                <p class="footnote">&copy Excursion</p>
             </footer>
         </div>
     </body>
